plugins {
    id 'java'
}

group 'com.matecko'
version '1.0-SNAPSHOT'

sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    def junitVer = '5.4.2'
    testCompile 'org.junit.jupiter:junit-jupiter-api:' + junitVer
    testRuntime 'org.junit.jupiter:junit-jupiter-engine:' + junitVer
}

test {
    useJUnitPlatform()
}